tests/should_fail/logic_alias/signature_mismatch_result.stderr
error[E0308]: mismatched types
  --> signature_mismatch_result.rs:10:15
   |
10 | #[logic_alias(get_greater_logic(x@, y@))]
   | --------------^^^^^^^^^^^^^^^^^^^^^^^^^--
   | |             |
   | |             expected `bool`, found `Int`
   | arguments to this function are incorrect
   |
note: function defined here
  --> creusot-std/src/stubs.rs:9:7

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
